--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -38,10 +38,10 @@ jobs:
           key: ${{ runner.os }}-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
       
       - name: Run tests
-        run: cargo test --verbose
+        run: cargo test
         
       - name: Run tests (release)
-        run: cargo test --release --verbose
+        run: cargo test --release
 
   clippy:
     name: Clippy
@@ -84,7 +84,7 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
         
       - name: Build
-        run: cargo build --verbose --all-features
+        run: cargo build SIMULATIONS--all-features
         
       - name: Build release
-        run: cargo build --release --verbose --all-features
+        run: cargo build --release SIMULATIONS--all-features
