--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -88,6 +88,10 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
+    needs:
+      - clippy
+      - fmt
+      - test
     steps:
       - uses: actions/checkout@v4
       
