--- a/demo-gui/Cargo.toml
+++ b/demo-gui/Cargo.toml
@@ -12,5 +12,5 @@ path = "src/main.rs"
 [dependencies]
 fire-sim-core = { path = "../crates/core" }
 nalgebra.workspace = true
-bevy = { version = "0.17", features = ["bevy_picking"] }
+bevy = "0.17"
 bevy_egui = "0.38"
