--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -156,7 +156,7 @@ jobs:
       - name: Cache Rust dependencies and build artifacts
         uses: Swatinem/rust-cache@v2
         with:
-          shared-key: "${{ matrix.os }}"
+          shared-key: "release-${{ matrix.os }}"
           cache-on-failure: true
 
       - name: Build release
