--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,6 +32,7 @@ jobs:
       - name: Cache Rust dependencies and build artifacts
         uses: Swatinem/rust-cache@v2
         with:
+          shared-key: "ubuntu-latest"
           cache-on-failure: true
       
       - name: Run tests
@@ -61,6 +62,7 @@ jobs:
       - name: Cache Rust dependencies and build artifacts
         uses: Swatinem/rust-cache@v2
         with:
+          shared-key: "ubuntu-latest"
           cache-on-failure: true
           
       - name: Run clippy
@@ -110,6 +112,7 @@ jobs:
       - name: Cache Rust dependencies and build artifacts
         uses: Swatinem/rust-cache@v2
         with:
+          shared-key: "${{ matrix.os }}"
           cache-on-failure: true
 
       - name: Build (dev/debug)
@@ -155,6 +158,7 @@ jobs:
       - name: Cache Rust dependencies and build artifacts
         uses: Swatinem/rust-cache@v2
         with:
+          shared-key: "${{ matrix.os }}"
           cache-on-failure: true
 
       - name: Build release
