--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,34 +10,6 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  test:
-    name: Test Suite
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            libasound2-dev \
-            libudev-dev \
-            libwayland-dev \
-            libxkbcommon-dev \
-            libvulkan-dev
-      
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-      
-      - name: Cache Rust dependencies and build artifacts
-        uses: Swatinem/rust-cache@v2
-        with:
-          shared-key: "ubuntu-latest"
-          cache-on-failure: true
-      
-      - name: Run tests
-        run: cargo test --all-features
-
   clippy:
     name: Clippy
     runs-on: ubuntu-latest
@@ -81,6 +53,37 @@ jobs:
           
       - name: Check formatting
         run: cargo fmt --all -- --check
+
+  test:
+    name: Test Suite
+    runs-on: ubuntu-latest
+    needs:
+      - clippy
+      - fmt
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            libasound2-dev \
+            libudev-dev \
+            libwayland-dev \
+            libxkbcommon-dev \
+            libvulkan-dev
+      
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+      
+      - name: Cache Rust dependencies and build artifacts
+        uses: Swatinem/rust-cache@v2
+        with:
+          shared-key: "ubuntu-latest"
+          cache-on-failure: true
+      
+      - name: Run tests
+        run: cargo test --all-features
 
   build-dev:
     name: "Build Debug"
