Enhance fire simulation tests with scientific validation and performance metrics
- Updated `integration_fire_behavior.rs` to include scientific references and validation for fire spread rates under varying weather conditions, ensuring realistic simulation outcomes.
- Introduced a new test suite in `scientific_validation.rs` that validates fire simulation against peer-reviewed research and historical data, covering various fire behavior models and conditions.
- Added detailed assertions and logging for fire spread behavior, ember spotting distances, and fire danger ratings based on established scientific literature.
- Improved performance monitoring in `main.rs` by measuring and displaying the time taken for each simulation step, enhancing user feedback during interactive sessions.

--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -10,6 +10,7 @@ rayon.workspace = true
 nalgebra.workspace = true
 rand.workspace = true
 serde.workspace = true
+rustc-hash.workspace = true
 
 [dev-dependencies]
 approx = "0.5"
