--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,4 @@ rayon = "1.11"
 nalgebra = { version = "0.34", features = ["serde-serialize"] }
 rand = "0.9"
 serde = { version = "1.0", features = ["derive"] }
+rustc-hash = "2.0"
