Remove push trigger for copilot branches in workflow configuration

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,10 +1,9 @@
 name: Tests
 
 on:
-  push:
-    branches: [ main, copilot/** ]
   pull_request:
     branches: [ main ]
+  workflow_run: 
 
 env:
   CARGO_TERM_COLOR: always
