--- a/crates/ffi/Cargo.toml
+++ b/crates/ffi/Cargo.toml
@@ -8,5 +8,8 @@ license.workspace = true
 [dependencies]
 fire-sim-core = { path = "../core" }
 
+[build-dependencies]
+cbindgen = "0.27"
+
 [lib]
 crate-type = ["cdylib", "staticlib"]
