Enhance Unreal Engine Integration with FFI Updates and New Features
- Automatically generate C header file during FFI crate build process.
- Introduce new lifecycle, fuel element, query, suppression, terrain, weather, and multiplayer functions in the FFI.
- Update FBurningElement and FSimulationSnapshot structs to include additional properties.
- Refactor AFireSimulationManager methods to align with new FFI functions and improve error handling.
- Implement consistent error codes for FFI functions and ensure return values are checked.
- Update documentation to reflect changes in API and provide examples for Blueprint integration and multiplayer actions.
- Improve performance and visualization guidelines for fire simulation elements.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["crates/core", "crates/ffi", "demo-headless", "demo-gui", "demo-interactive"]
+members = ["crates/core", "crates/ffi", "demo-interactive"]
 resolver = "2"
 
 [workspace.package]
