feat: update cbindgen version, enhance FFI bindings, and add .gitignore for generated files

--- a/crates/ffi/cbindgen.toml
+++ b/crates/ffi/cbindgen.toml
@@ -5,8 +5,4 @@ include_version = true
 namespace = "fire_sim"
 
 [export]
-include = ["FireElementVisual", "EmberVisual"]
-
-[export.rename]
-"FireElementVisual" = "FireElementVisual"
-"EmberVisual" = "EmberVisual"
+include = ["*"]
