--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,12 @@
 members = ["crates/core", "crates/ffi", "demo-interactive"]
 resolver = "2"
 
+[workspace.lints.rust]
+warnings = "deny"
+
+[workspace.lints.clippy]
+all = "deny"
+
 [workspace.package]
 version = "0.1.0"
 edition = "2021"
