--- a/crates/ffi/Cargo.toml
+++ b/crates/ffi/Cargo.toml
@@ -5,6 +5,9 @@ edition.workspace = true
 authors.workspace = true
 license.workspace = true
 
+[lints]
+workspace = true
+
 [dependencies]
 fire-sim-core = { path = "../core" }
 
