--- a/demo-interactive/Cargo.toml
+++ b/demo-interactive/Cargo.toml
@@ -5,6 +5,9 @@ edition.workspace = true
 authors.workspace = true
 license.workspace = true
 
+[lints]
+workspace = true
+
 [[bin]]
 name = "demo-interactive"
 path = "src/main.rs"
