--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ unreadable_literal = "allow"         # Scientific constants don't need separator
 trivially_copy_pass_by_ref = "allow" # API stability preference
 must_use_candidate = "allow"         # Too noisy for simulation code
 return_self_not_must_use = "allow"   # Builder pattern preference
+float_cmp = "allow"                  # Tests verify exact assigned values
 
 [workspace.package]
 version = "0.1.0"
