--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,22 +3,33 @@ name: Tests
 on:
   push:
   pull_request:
+    # Run when PR becomes ready AND when new commits are pushed to an already-ready PR.
     types:
       - ready_for_review
+      - synchronize
   workflow_dispatch:  
 
 env:
   CARGO_TERM_COLOR: always
 
 concurrency:
-  # Use the pull-request head ref (branch) if present, otherwise the ref name (branch) from push.
-  # This keeps push and PR runs on the same branch grouped so the push run will be cancelled
-  # when a non-draft PR run starts for that same branch.
-  group: ${{ github.workflow }}-${{ github.head_ref || github.ref_name }}
+  # Grouping strategy:
+  # - If the event is a draft PR, give that run a "draft" suffix so it does NOT share the
+  #   concurrency group with normal pushes (this prevents a draft PR run from cancelling a push).
+  # - For push events and non-draft PR events, use the same "ready" group so a non-draft PR run
+  #   WILL cancel any in-progress push run for the same branch.
+  #
+  # This expression resolves to either "draft" (for draft PR events) or "ready" (for push
+  # runs and non-draft PR runs).
+  # Append '-draft' only when this is a draft PR run; leave no suffix otherwise so
+  # pushes and non-draft PR runs share the same concurrency group (they can cancel each other).
+  group: ${{ github.workflow }}-${{ github.head_ref || github.ref_name }}${{ github.event_name == 'pull_request' && github.event.pull_request.draft == true && '-draft' || '' }}
   cancel-in-progress: true
 
 jobs:
   clippy:
+    if: >-
+      github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.draft == false)
     name: Clippy
     runs-on: ubuntu-latest
     steps:
@@ -49,6 +60,8 @@ jobs:
         run: cargo clippy --all-features -- -D warnings
 
   fmt:
+    if: >-
+      github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.draft == false)
     name: Rustfmt
     runs-on: ubuntu-latest
     steps:
@@ -63,6 +76,8 @@ jobs:
         run: cargo fmt --all -- --check
 
   test:
+    if: >-
+      github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.draft == false)
     name: Test Suite
     runs-on: ubuntu-latest
     needs:
@@ -94,6 +109,8 @@ jobs:
         run: cargo test --all-features
 
   build-dev:
+    if: >-
+      github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.draft == false)
     name: "Build Debug"
     runs-on: ${{ matrix.os }}
     strategy:
@@ -138,6 +155,8 @@ jobs:
             target/debug/demo-interactive.exe
 
   build-release:
+    if: >-
+      github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.draft == false)
     name: "Build Release"
     runs-on: ${{ matrix.os }}
     strategy:
