--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,6 +38,6 @@ rand = "0.9"
 serde = { version = "1.0", features = ["derive"] }
 rustc-hash = "2.0"
 
-[profile.release-debug]
+[profile.profiling]
 inherits = "dev"
 opt-level = 3
