--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,3 +41,10 @@ rustc-hash = "2.0"
 [profile.profiling]
 inherits = "dev"
 opt-level = 3
+lto = "thin"
+codegen-units = 1
+
+[profile.release]
+opt-level = 3
+lto = "thin"
+codegen-units = 1
