--- a/crates/core/Cargo.toml
+++ b/crates/core/Cargo.toml
@@ -14,6 +14,9 @@ nalgebra.workspace = true
 rand.workspace = true
 serde.workspace = true
 rustc-hash.workspace = true
+tracing = "0.1.44"
 
 [dev-dependencies]
 approx = "0.5"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+ctor = "0.1"
