--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -40,7 +40,7 @@ jobs:
           cache-on-failure: true
           
       - name: Run clippy
-        run: cargo clippy --all-features -- -D warnings
+        run: cargo clippy
 
   fmt:
     name: Rustfmt
@@ -85,7 +85,7 @@ jobs:
           cache-on-failure: true
       
       - name: Run tests
-        run: cargo test --all-features
+        run: cargo test
 
   build-dev:
     name: "Build Debug"
@@ -121,7 +121,7 @@ jobs:
           cache-on-failure: true
 
       - name: Build (dev/debug)
-        run: cargo build --all-features
+        run: cargo build
 
       - name: Upload dev demo-interactive binary
         uses: actions/upload-artifact@v4
@@ -165,7 +165,7 @@ jobs:
           cache-on-failure: true
 
       - name: Build release
-        run: cargo build --release --all-features
+        run: cargo build --release
 
       - name: Upload release demo-interactive binary
         uses: actions/upload-artifact@v4
