Update Cargo.toml to enable default features for fire-sim-core dependency

--- a/crates/ffi/Cargo.toml
+++ b/crates/ffi/Cargo.toml
@@ -8,8 +8,12 @@ license.workspace = true
 [lints]
 workspace = true
 
+[features]
+default = ["gpu"]
+gpu = ["fire-sim-core/gpu"]
+
 [dependencies]
-fire-sim-core = { path = "../core" }
+fire-sim-core = { path = "../core", default-features = false }
 
 [build-dependencies]
 cbindgen = "0.29"
